--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install matplotlib
+      run: pip install matplotlib numpy
 
     - name: Jalankan skrip Python
       run: python jualan_harian.py
@@ -28,5 +28,5 @@ jobs:
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add graf_jualan.png
-        git commit -m "Add auto-generated sales graph"
+        git diff --quiet && echo "Tiada perubahan untuk commit" || git commit -m "Add auto-generated sales graph"
         git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
