--- a/.github/workflows/jalankan-jualan.yml
+++ b/.github/workflows/jalankan-jualan.yml
@@ -3,6 +3,10 @@ name: Jalankan Skrip Jualan
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:  # Untuk jalankan manual dari GitHub
+
+permissions:
+  contents: write  # ✅ Ini membenarkan push ke repo
 
 jobs:
   run-script:
@@ -10,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout kod
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2  # ✅ Gunakan v2 untuk push dengan token GitHub Actions
 
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -29,4 +33,4 @@ jobs:
         git config user.email "github-actions@github.com"
         git add graf_jualan.png
         git diff --quiet && echo "Tiada perubahan untuk commit" || git commit -m "Add auto-generated sales graph"
-        git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+        git push
