--- a/.github/workflows/jalankan-jualan.yml
+++ b/.github/workflows/jalankan-jualan.yml
@@ -33,4 +33,4 @@ jobs:
         git config user.email "github-actions@github.com"
         git add graf_jualan.png
         git diff --quiet && echo "Tiada perubahan untuk commit" || git commit -m "Add auto-generated sales graph"
-        git push
+        git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
